--- a/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/main.css
+++ b/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/main.css
@@ -228,7 +228,8 @@ li.current {
 #best-back img{
     width: 262px;
     height: 375px;
-    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 #best2{
     margin-left: 100px;
@@ -242,8 +243,10 @@ li.current {
 }
 
 #new-back img{
-    width: 17%;
-    height: 7%;
+    width: 262px;
+    height: 375px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .more{
