--- a/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/mypage.css
+++ b/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/mypage.css
@@ -248,6 +248,10 @@ a{
 	width:14%;
 	font-size:17px;
 }
+.list_table tr td input{
+	font-size:17px;
+	font-family:"nanum";
+}
 .table tr td{
     width: 15%;
     font-size: 17px;
