--- a/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/mypage.css
+++ b/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/mypage.css
@@ -414,7 +414,7 @@ a{
     font-size: 25px;
 }
 #event{
-    background-image: url(../images/event.svg);
+    background-image: url(../images/event.png);
     width: 100%;
     height: 700px;
 }
